--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://www.ncpwg.org"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Name Change Policy Working Group"
+publishDir = "docs"
