--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -2,7 +2,7 @@ mainSections:
   - posts
 description: A homepage and resource guide for the Name Change Policy Working Group.
 
-repoURL:
+repoURL: https://github.com/brimwats/ncpwg
 # If it is a Github repo, leave blank
 repoEditURL:
 
