--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.ncpwg.org"
+baseURL = "ncpwg.org"
 languageCode = "en-us"
 title = "Name Change Policy Working Group"
 publishDir = "docs"
